<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--    Portion of where the numbers go-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3"
        >
    </LinearLayout>


    <!--    The bottom with the numbers/operators-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="vertical"
        android:weightSum="5"
        >


        <LinearLayout
            style="@style/calculator_row"
            >

            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/all_clear"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/plus_minus"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/percent"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_dark_gray"
                android:text="@string/divide"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/calculator_row"

            >

            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_7"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_8"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_9"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_dark_gray"
                android:text="@string/x"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/calculator_row"

            >

            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_4"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_5"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_6"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_dark_gray"
                android:text="@string/sub"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/calculator_row"
            >

            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_1"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_2"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/_3"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_dark_gray"
                android:text="@string/add"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/calculator_row"
            >

            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:layout_weight="2"
                android:text="@string/_0"
                />

            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_gray"
                android:text="@string/period"
                />
            <com.google.android.material.textview.MaterialTextView
                style="@style/button_appearance_dark_gray"
                android:text="@string/equal"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>







